Backport r1046921:

* Make data direction load from the correct place.  That place is the
  plot-area style, not the plot-area element.

* Add some comments.

BUG: 134195

svn path=/branches/koffice/2.1/koffice/; revision=1046926